- fixed extra space showing below footer

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,12 @@ a {
     text-decoration: none;
 }
 
+.whole-site-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 60vh;
+}
+
 /* header */
 
 header {
